isUserEnabled for Admin class

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <hr />
         <h2>Formulario de Inicio de sesion</h2>
         <form id="login">
-            <input id="loginUserName" placeholder="Ingrese su nombre de usuario" type="text" value="johndoe" />
-            <input id="loginPswd" placeholder="Ingrese su password" type="password" value="123456" />
+            <input id="loginUserName" placeholder="Ingrese su nombre de usuario" type="text" value="pippo" />
+            <input id="loginPswd" placeholder="Ingrese su password" type="password" value="123456789" />
             <button id="loginBtn" type="button">Iniciar sesion</button>
 
 
