--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
     </div>
     <div id="contentApp">
 
-        <h2>Bienvenido</h2>
+        <h2>Bienvenido</h2> <br />
+        <input type="button" value="Cerrar" id="logOutbtn" />
         <hr />
         <section>
             <div id="seccionAdministrador">
                 <h2>Administrador logueado</h2>
-                <input type="button" value="Cerrar" id="btnSalirAdmin" /> <br />
+                 <br />
           
                 <h2>Lista de usuarios</h2>
                 <input type="radio" name="mostrar" id="radioAll" checked> 
