--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id="loginRegister">
         <h2>Formulario de registro</h2>
         <form id="register">
-            <input id="registerName" placeholder="Ingrese su nombre" type="text" value="Filippo" />
-            <input id="registerLastName" placeholder="Ingrese su Apellido" type="text" value="Muro" />
+            <input id="registerName" placeholder="Ingrese su nombre" type="text" value="Iván" />
+            <input id="registerLastName" placeholder="Ingrese su Apellido" type="text" value="El terrible" />
 
-            <input id="registerUserName" placeholder="Ingrese su nombre de usuario" type="text" value="Flopa" />
-            <input id="registerPswd" placeholder="Ingrese su password" type="text" value="Password123" />
-            <input id="registerPswd2" placeholder="Confirme su password" type="text" value="Password123" />
+            <input id="registerUserName" placeholder="Ingrese su nombre de usuario" type="text" value="Floppa" />
+            <input id="registerPswd" placeholder="Ingrese su password" type="password" value="123456" />
+            <input id="registerPswd2" placeholder="Confirme su password" type="password" value="123456" />
             <input id="registerCreditCard" type="text" placeholder="Ingrese su tarjeta de credito"
-                value="1234-1234-1234-1234" />
+                value="4001919257537193" />
             <input id="registerCVC" type="text" placeholder="Ingrese su CVC" value="123" />
 
             <button id="registerBtn" type="button">Iniciar sesion</button>
@@ -244,6 +244,7 @@
     </div>
     <script src="js/lib.js"></script>
     <script src="js/clases.js"></script>
+    <script src="js/luhn.js"></script>
     <script src="js/funciones.js"></script>
 </body>
 
