--- a/index.html
+++ b/index.html
@@ -130,36 +130,27 @@
                             <th>Tipo de Instancia</th>
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
-
-
                             <th>Stock</th>
                         </tr>
                     </thead>
-                    <tbody style="border:2px solid black;">
+                    <tbody style="border:2px solid black;" id="catalogTbodyCompute">
                         <tr>
                             <td>c7.large</td>
                             <td>U$S 50</td>
-
                             <td>U$S 6</td>
-                            <td>SI: 4</td>
-
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                         <tr>
                             <td>c7.medium</td>
                             <td>U$S 30</td>
-
                             <td>U$S 3,50</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                         <tr>
                             <td>c7.small</td>
                             <td>U$S 20</td>
-
                             <td>U$S 2,50</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                     </tbody>
                 </table>
@@ -171,35 +162,27 @@
                             <th>Tipo de Instancia</th>
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
-
-
                             <th>Stock</th>
                         </tr>
                     </thead>
-                    <tbody style="border:2px solid black;">
+                    <tbody style="border:2px solid black;" id="catalogTbodyMemory">
                         <tr>
                             <td>r7.large</td>
                             <td>U$S 60</td>
 
                             <td>U$S 7</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                         <tr>
                             <td>r7.medium</td>
                             <td>U$S 50</td>
-
                             <td>U$S 6,50</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                         <tr>
                             <td>r7.small</td>
                             <td>U$S 35</td>
-
-                            <td>U$S 4</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                     </tbody>
                 </table>
@@ -212,27 +195,21 @@
                             <th>Tipo de Instancia</th>
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
-
-
                             <th>Stock</th>
                         </tr>
                     </thead>
-                    <tbody style="border:2px solid black;">
+                    <tbody style="border:2px solid black;" id="catalogTbodyAStorage">
                         <tr>
                             <td>r7.large</td>
                             <td>U$S 50</td>
-
                             <td>U$S 6,50</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
                         <tr>
                             <td>r7.medium</td>
                             <td>U$S 30</td>
-
                             <td>U$S 3,50</td>
-                            <td>SI: 4</td>
-
+                            <td>ERROR al cargar el stock</td>
                         </tr>
 
                     </tbody>
