rented by user list started and working

--- a/index.html
+++ b/index.html
@@ -88,19 +88,8 @@
                             <th>Orden</th>
                         </tr>
                     </thead>
-                    <tbody style="border:2px solid black;">
-                        <tr>
-                            <td>c7.large</td>
-                            <td>Encendida</td>
-                            <td>3 veces</td>
-                            <td>
-                                <select name="" id="">
-                                    <option value="turnOff">Apagar</option>
-                                    <option value="restart">Reiniciar</option>
-                                    <option value="Incicial" disabled>Iniciar</option>
-                                </select>
-                            </td>
-                        </tr>
+                    <tbody style="border:2px solid black;" id="tInstancesRented">
+
                     </tbody>
                 </table>
             </section>
