--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
                             <th>Stock</th>
+                            <th>Alquiler</th>
                         </tr>
                     </thead>
                     <tbody style="border:2px solid black;" id="catalogTbodyCompute">
@@ -152,6 +153,7 @@
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
                             <th>Stock</th>
+                            <th>Alquiler</th>
                         </tr>
                     </thead>
                     <tbody style="border:2px solid black;" id="catalogTbodyMemory">
@@ -185,6 +187,7 @@
                             <th>Costo de alquiler</th>
                             <th>Costo por encendido</th>
                             <th>Stock</th>
+                            <th>Alquiler</th>
                         </tr>
                     </thead>
                     <tbody style="border:2px solid black;" id="catalogTbodyAStorage">
