rent a machine works

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <table style="border:2px solid black;">
                     <thead style="border:2px solid black;">
                         <tr>
-                            <th>Instancia</th>
+                            <th>ID de Instancia</th>
+                            <th>Tipo de Instancia</th>
+                            <th>Especialización</th>
                             <th>Estado</th>
                             <th>Veces iniciada</th>
                             <th>Orden</th>
