turn off and unRent with onclick property

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                             <th>Especialización</th>
                             <th>Estado</th>
                             <th>Veces iniciada</th>
-                            <th>Orden</th>
+                            <th>Estado</th>
+                            <th>Alquiler</th>
+
                         </tr>
                     </thead>
                     <tbody style="border:2px solid black;" id="tInstancesRented">
